# lorekeeper

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  agent.py  api.py  auth.py  config.py  docker-compose.yml  fetcher.py  ingest.py  pyproject.toml  qdrant_mcp_extended.py  rag_ask.py
.github/actions/biome-check/: action.yml
.github/actions/pytest-check/: action.yml
.github/workflows/: backend.yml  ci.yml  deploy.yml  mypy.yml  ruff.yml
.run/: Compose Deployment --build.run.xml  Compose Deployment.run.xml  agent.run.xml  api.run.xml  fetcher.run.xml  obsidian_mcp_server.run.xml  qdrant_mcp_server.run.xml
backend/: .env.example  Dockerfile  agent.py  api.py  config.py  pyproject.toml  qdrant_mcp_extended.py  skills.py
backend/obsidian_portal/: api.py  auth.py  calendar_api.py  fetcher.py  ingest.py  mcp_server.py  models.py  quest_parser.py
backend/src/lorekeeper/: agent.py  api.py  config.py  observability.py  qdrant_mcp_extended.py  skills.py
backend/src/lorekeeper/obsidian_portal/: api.py  auth.py  calendar_api.py  calendar_parser.py  fetcher.py  ingest.py  link_injector.py  mcp_server.py  models.py  quest_parser.py
backend/tests/: test_calendar_parser.py  test_inject_links.py  test_quest_parser.py
backend/tests/obsidian_portal/: test_calendar_parser.py  test_inject_links.py  test_quest_parser.py
cron/: Dockerfile  crontab
frontend/: Dockerfile  biome.json  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  App.tsx  main.tsx  vite-env.d.ts
obsidian_portal/: auth.py  fetcher.py  ingest.py  mcp_server.py
