[project]
name = "lorekeeper"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "qdrant-client~=1.16",
    "requests-oauthlib~=2.0",
    "sentence-transformers~=5.1",
]

[dependency-groups]
dev = [
    "ipython>=9.7.0",
]
