[project]
name = "lorekeeper"
version = "0.1.0"
description = "An AI-powered Obsidian Portal lore management assistant."
authors = [
    {name = "galst1234", email = "12615933+galst1234@users.noreply.github.com"},
]
readme = "../README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings~=2.7",
    "qdrant-client~=1.17",
    "requests-oauthlib~=2.0",
    "openai~=2.26",
    "requests~=2.32",
    "pydantic-ai~=1.56",
    "fastmcp~=3.1",
    "pydantic~=2.12",
    "mcp-server-qdrant~=0.8",
    "fastembed>=0.4",
    "fastapi>=0.135.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "ipython>=9.7.0",
    "pre-commit~=4.5",
    "ruff~=0.15",
    "ty>=0.0.17",
    "pytest~=9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lorekeeper"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 120
indent-width = 4

target-version = "py313"

preview = true


[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # pylint
    "PL",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flakes8-annotations
    "ANN",
    # flake8-commas
    "COM",
    # flake8-comprehensions
    "C4",
    # flake8-quotes
    "Q",
    # pep8-naming
    "N",
    # Ruff
    "RUF",
    # McCabe complexity
    "C90",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "PLR2004",   # magic value comparisons are fine in tests
    "PLR0913",   # many fixtures/params is normal
    "PLR0917",   # many positional args in parametrized test functions is normal
    "PLC2701",   # importing private names for white-box unit testing is expected
    "PLC1901",   # explicit `== ""` in assertions is clearer than `not x`
    "RUF059",    # unused unpacked vars when only some return values are asserted
    "E501",      # test assertions and parametrize strings can be long
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.pylint]
max-positional-args = 3
